--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -235,41 +235,41 @@ list.push("P1-Villa-109,@Satish Kumar,@7597728629,@2,@Owner");
 list.push("P1-Villa-110,@Deepika Sharma,@9828165065,@2,@Owner"); 
 list.push("P1-Villa-111,@Rajat Kumar Sharma,@9828165065,@2,@Owner"); 
 
-     list.push("P2-Villa-01,@MayankGoyal,@ 9460895514,@2,@Owner"); 
-        list.push("P2-Villa-02,@RaghavChoudhary,@9414887738,@2,@Owner"); 
-        list.push("P2-Villa-03,@HimmatSingh,@8452914699,@2,@Owner"); 
-        list.push("P2-Villa-04,@MeghrajKhandelwal,@9413342272,@2,@Owner"); 
-        list.push("P2-Villa-05,@ManjuSharma,@9414503196,@2,@Owner"); 
-        list.push("P2-Villa-06,@MonikaKheswani,@8003168660,@2,@Owner"); 
-        list.push("P2-Villa-07,@shishirNama,@9667867899,@2,@Owner"); 
-        list.push("P2-Villa-08,@SarojSharma,@9829155620,@2,@Owner"); 
-        list.push("P2-Villa-09,@Rajkumar Sharma,@9829155620,@2,@Owner"); 
-        list.push("P2-Villa-10,@Deokantasharma,@9829578079,@2,@Owner"); 
+     list.push("P2-Villa-01,@Mayank Goyal,@ 9460895514,@2,@Owner"); 
+        list.push("P2-Villa-02,@Raghav Choudhary,@9414887738,@2,@Owner"); 
+        list.push("P2-Villa-03,@Himmat Singh,@8452914699,@2,@Owner"); 
+        list.push("P2-Villa-04,@Meghraj Khandelwal,@9413342272,@2,@Owner"); 
+        list.push("P2-Villa-05,@Manju Sharma,@9414503196,@2,@Owner"); 
+        list.push("P2-Villa-06,@Moni kaKheswani,@8003168660,@2,@Owner"); 
+        list.push("P2-Villa-07,@shishir Nama,@9667867899,@2,@Owner"); 
+        list.push("P2-Villa-08,@Saroj Sharma,@9829155620,@2,@Owner"); 
+        list.push("P2-Villa-09,@Raj kumar Sharma,@9829155620,@2,@Owner"); 
+        list.push("P2-Villa-10,@Deokanta sharma,@9829578079,@2,@Owner"); 
         list.push("P2-Villa-11,@Payal,@8107448440,@2,@Owner"); 
-        list.push("P2-Villa-12,@RashmiJain,@7253918276,@2,@Owner"); 
-        list.push("P2-Villa-13,@AnkurSurana,@9910914400,@2,@Owner"); 
-        list.push("P2-Villa-14,@JitendraLalwani,@9829342758,@2,@Owner"); 
-        list.push("P2-Villa-15,@DropatiLalwani,@8290703832,@2,@Owner"); 
-        list.push("P2-Villa-16,@SeemaAsawat,@9904235800,@2,@Owner"); 
-        list.push("P2-Villa-17,@SampatiDevi Sharma,@9085549287,@2,@Owner"); 
-        list.push("P2-Villa-18,@AnshulKumar Goyal,@9414370892,@2,@Owner"); 
-        list.push("P2-Villa-19,@PraveenYadav,@9418691100,@2,@Owner"); 
-        list.push("P2-Villa-20,@NamitaKumawat,@9535368318,@2,@Owner"); 
-        list.push("P2-Villa-21,@MohanKhandelwal,@7597333055,@2,@Owner"); 
-        list.push("P2-Villa-22-A,@MohanKhandelwal,@7597333055,@2,@Owner"); 
-        list.push("P2-Villa-22-B,@LokeshKumar Bapna,@9414071427,@2,@Owner"); 
-        list.push("P2-Villa-23,@LokeshKumar Bapna,@9414071427,@2,@Owner"); 
-        list.push("P2-Villa-24,@DileepDhandel,@9871698451,@2,@Owner"); 
-        list.push("P2-Villa-25,@ManishaSharma,@9828558064,@2,@Owner"); 
-        list.push("P2-Villa-26,@PragyaSharma,@9880126051,@2,@Owner"); 
-        list.push("P2-Villa-27,@ManjuRohia,@9549141000,@2,@Owner"); 
-        list.push("P2-Villa-28,@NilamKumari Yadav,@7984479593,@2,@Owner"); 
-        list.push("P2-Villa-29,@SunitaLalwani,@9717895599,@2,@Owner"); 
-        list.push("P2-Villa-30,@DeepChand,@9782220091,@2,@Owner"); 
-        list.push("P2-Villa-31,@NavdeepKumar,@9717781488,@2,@Owner"); 
-        list.push("P2-Villa-34,@Monikashahani,@9636866877,@2,@Owner"); 
-        list.push("P2-Villa-35,@MonikaKhandelwal,@9413910715,@2,@Owner"); 
-        list.push("P2-Villa-37,@CharulRathore,@9672265495,@2,@Owner"); 
+        list.push("P2-Villa-12,@Rashmi Jain,@7253918276,@2,@Owner"); 
+        list.push("P2-Villa-13,@Ankur Surana,@9910914400,@2,@Owner"); 
+        list.push("P2-Villa-14,@Jitendra Lalwani,@9829342758,@2,@Owner"); 
+        list.push("P2-Villa-15,@Dropati Lalwani,@8290703832,@2,@Owner"); 
+        list.push("P2-Villa-16,@Seema Asawat,@9904235800,@2,@Owner"); 
+        list.push("P2-Villa-17,@Sampati Devi Sharma,@9085549287,@2,@Owner"); 
+        list.push("P2-Villa-18,@Anshul Kumar Goyal,@9414370892,@2,@Owner"); 
+        list.push("P2-Villa-19,@Praveen Yadav,@9418691100,@2,@Owner"); 
+        list.push("P2-Villa-20,@Namita Kumawat,@9535368318,@2,@Owner"); 
+        list.push("P2-Villa-21,@Mohan Khandelwal,@7597333055,@2,@Owner"); 
+        list.push("P2-Villa-22-A,@Mohan Khandelwal,@7597333055,@2,@Owner"); 
+        list.push("P2-Villa-22-B,@Lokes hKumar Bapna,@9414071427,@2,@Owner"); 
+        list.push("P2-Villa-23,@Lokesh Kumar Bapna,@9414071427,@2,@Owner"); 
+        list.push("P2-Villa-24,@Dileep Dhandel,@9871698451,@2,@Owner"); 
+        list.push("P2-Villa-25,@Manisha Sharma,@9828558064,@2,@Owner"); 
+        list.push("P2-Villa-26,@Pragya Sharma,@9880126051,@2,@Owner"); 
+        list.push("P2-Villa-27,@Manju Rohia,@9549141000,@2,@Owner"); 
+        list.push("P2-Villa-28,@Nilam Kumari Yadav,@7984479593,@2,@Owner"); 
+        list.push("P2-Villa-29,@Sunita Lalwani,@9717895599,@2,@Owner"); 
+        list.push("P2-Villa-30,@Deep Chand,@9782220091,@2,@Owner"); 
+        list.push("P2-Villa-31,@Navdeep Kumar,@9717781488,@2,@Owner"); 
+        list.push("P2-Villa-34,@Monika shahani,@9636866877,@2,@Owner"); 
+        list.push("P2-Villa-35,@Monika Khandelwal,@9413910715,@2,@Owner"); 
+        list.push("P2-Villa-37,@Charul Rathore,@9672265495,@2,@Owner"); 
         list.push("P2-Villa-38,@Sumit Panwar,@9785071925,@2,@Owner"); 
         list.push("P2-Villa-39,@Nikita sharma,@9494536822,@2,@Owner"); 
         list.push("P2-Villa-40,@Rajnish Machiwal,@9414359698,@2,@Owner"); 
