--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -162,7 +162,7 @@
   list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-14	,Ayush Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-15	,,,,,,,,,,,,,");
-  list.push("	P1-Villa-16	,Preeti Meena,,,,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-16	,Preeti Meena,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-17	,Khushi & Raju Khandelwal,,,,,,,,,,,,");
   list.push("	P1-Villa-18	,Pooja Saxena,,,,,,,,,,,,");
   list.push("	P1-Villa-19	,Kritika & Hitesh Sain,1000,1000,1000,,,,,,,,,");
@@ -171,7 +171,7 @@
   list.push("	P1-Villa-22	,Shivani Sanjay Sharma,,,,,,,,,,,,");
   list.push("	P1-Villa-23	,Akshy Saraswat,,,,,,,,,,,,");
   list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-25	,Pooja Khandelwal,,,,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-25	,Pooja Khandelwal,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
