--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -197,7 +197,7 @@
   list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-49	,Sunita Verma,,,,,,,,,,,,");
   list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-54	,Vinod Garg,,,,,,,,,,,,");
