--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -240,7 +240,7 @@ list.push("P1-Villa-111,@Rajat Kumar Sharma,@9828165065,@2,@Owner");
         list.push("P2-Villa-03,@Himmat Singh,@8452914699,@2,@Owner"); 
         list.push("P2-Villa-04,@Meghraj Khandelwal,@9413342272,@2,@Owner"); 
         list.push("P2-Villa-05,@Manju Sharma,@9414503196,@2,@Owner"); 
-        list.push("P2-Villa-06,@Moni kaKheswani,@8003168660,@2,@Owner"); 
+        list.push("P2-Villa-06,@Monika Kheswani,@8003168660,@2,@Owner"); 
         list.push("P2-Villa-07,@shishir Nama,@9667867899,@2,@Owner"); 
         list.push("P2-Villa-08,@Saroj Sharma,@9829155620,@2,@Owner"); 
         list.push("P2-Villa-09,@Raj kumar Sharma,@9829155620,@2,@Owner"); 
