--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -65,12 +65,14 @@
                 <br>
                 <h4 style="color:darkgreen">  Monthly Maintenance Details (1000 per month till Jun and from July 2000 from each villa)</h4>
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji Shubh Villa </h4>
+                <h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>
                 <br>
-                <h4 style="color:darkgreen">  Jan-Feb-Mar 2023 Balance = 1,29,000  </h4>
+                <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
+                <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
+                <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,24,000  </h4>
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
-                <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
+                <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
 
               
 
