--- a/OtherActivity.html
+++ b/OtherActivity.html
@@ -49,6 +49,8 @@
                                 <ul class="nav navbar-nav">
                                     <li><a href="index.html">HOME </a></li>
                                     <li class="activeHeader"><a href="OtherActivity.html">Other Activity</a></li>
+                                    <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
+                                    <li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
                                     <li><a href="ContactForm.html">Feedback\Suggestions</a></li>
                                 </ul>
                             </div>
