--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
 									<li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									<li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
-									<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
-									<li><a href="OtherActivity.html">Other Activity</a></li>
+									<!--<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>-->
+									<!--<li><a href="OtherActivity.html">Other Activity</a></li>-->
 									<li><a href="MeetingHistory.html">Meeting History</a></li>
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
 									<!--<li><a href="OCDinner.html">OC Status</a></li>-->
@@ -88,11 +88,14 @@
 				</div>
 			</div>
 		</div>
+<!--		
+		<h4 style="color: red">Key Highlights ......</h4> 
+		<p style="color: blue">Till now, Jul-Aug-Sep 2023 Balance: 3,24,000</p> 
 
-		<!--<section class="carosal-area indeximage">
+		<section class="carosal-area indeximage">
         <div class="container">
-            <div class="row">-->
-		<!--<div class="col-md-12">
+            <div class="row">
+		<div class="col-md-12">
             <div class="client owl-carousel owl-theme">
                 <div class="item">
                     <div class="text">
@@ -125,8 +128,8 @@
 		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
 
-	 <p style="color: red">Next Meeting date not decided yet.</p> 
-	-->
+
+
 		<p style="color: rgb(246, 72, 34)"><b>  Krishna Janmashtami event prize distribution on Ganesh Visarjan Day  </b></p>
 <pre style="color: rgb(35, 9, 228)">
 		
@@ -154,9 +157,10 @@
 
 		</pre>
 	<br>
-
-		<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
+	-->
 	<!--
+			<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
+	
 		<p style="color: rgb(246, 72, 34)"><b>  Ganesh Chaturthi, 19 September 2023   </b></p>
 		-->
 		<section class="our_activity">
@@ -173,8 +177,9 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
+							<p style="color: red">Next Meeting date not decided yet.</p> 
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
-							 <p style="color: red">Next Meeting date not decided yet.</p> 
+							
 							 <p style="color: rgb(20, 9, 238)">Next Meeting date for RWA, Yet to decide, any of day from 13 or 14 or 15 August (As per per maximum availability).</p> 
 							                              <p style="color:red">  Holi Celebration:  </p> 
 							                             <p>   10th March 2020 (09:00 AM)  </p> -->
