--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -51,6 +51,7 @@
                                     <li class="activeHeader"><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
                                     <!--<li ><a href="OneTimeCollection.html">OneTime Collection</a></li>-->
                                     <li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
+                                    <li><a href="OtherActivity.html">Other Activity</a></li>
                                     <li><a href="ContactForm.html">Feedback\Suggestions</a></li>
                                 </ul>
                             </div>
