--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -51,7 +51,7 @@
                                     <li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									
                                     <li class="activeHeader"><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
-                                    
+                                    <li><a href="OtherActivity.html">Other Activity</a></li>
                                     <li><a href="ContactForm.html">Feedback\Suggestions</a></li>
                                 </ul>
                             </div>
