--- a/index.html
+++ b/index.html
@@ -163,6 +163,53 @@
 	
 		<p style="color: rgb(246, 72, 34)"><b>  Ganesh Chaturthi, 19 September 2023   </b></p>
 		-->
+
+		<div style="margin-top:50px">
+			<div>
+			<h3 style=" text-align: center; color: green;">Shubh Villa RWA Padadhikari</h3>
+				
+				<div >
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/AD.jpg" width="60px" heigt="90px"  alt="">
+							<div class="card-body">
+								<h5>Mr. B. P. Saraswat<br/>
+									<span>Contact No: 9414435301</span></h5>
+								<p class="card-text">Mr. B. P. Saraswat, Adhyaksha of Shubh Villa (Phase-1, Villa No. 24).</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/UAD.jpg" width="60px" heigt="90px"  alt="">
+							<div class="card-body">
+								<h5>Mrs Rukmani Devi<br/>
+									<span>Contact No: 9829344150</span></h5>
+								<p class="card-text">Mrs Rukmani Devi, Upaadhyaksha of Shubh Villa.</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/SA.jpg" width="60px" heigt="90px"  alt="">
+							<div class="card-body">
+								<h5>Mr.Yogesh Kumar<br/>
+									<span>Contact No: 9549141000</span></h5>
+								<p class="card-text">Mr.Yogesh Kumar, is Sachiv of Shubh Villa (Phase-2, Villa No. 27).</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/KA.jpg" width="60px" heigt="90px" alt="">
+							<div class="card-body">
+								<h5>Mr. Jogendra Sachdeva<br/>
+									<span>Contact No: 9828080386</span></h5>
+								<p class="card-text">Mr. Jogendra Sachdeva, is Kosha Adhayaks of Shubh Villa (Phase-1, Villa No. 10).</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
