--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<div class="card-body">
 								<h5>Mr. B. P. Saraswat<br/>
 									<span>Contact No: 9414435301</span></h5>
-								<p class="card-text">Mr. B. P. Saraswat, Adhyaksha of Shubh Villa (Phase-1, Villa No. 24).</p>
+								<p class="card-text">Mr. B. P. Saraswat, Adhyaksha (अध्यक्ष) of Shubh Villa (Phase-1, Villa No. 24).</p>
 							</div>
 						</div>
 					</div>
@@ -183,7 +183,7 @@
 							<div class="card-body">
 								<h5>Mrs Rukmani Devi<br/>
 									<span>Contact No: 9829344150</span></h5>
-								<p class="card-text">Mrs Rukmani Devi, Upaadhyaksha of Shubh Villa.</p>
+								<p class="card-text">Mrs Rukmani Devi, Upaadhyaksha (उपाध्यक्ष) of Shubh Villa.</p>
 							</div>
 						</div>
 					</div>
@@ -192,7 +192,7 @@
 							<div class="card-body">
 								<h5>Mr.Yogesh Kumar<br/>
 									<span>Contact No: 9549141000</span></h5>
-								<p class="card-text">Mr.Yogesh Kumar, is Sachiv of Shubh Villa (Phase-2, Villa No. 27).</p>
+								<p class="card-text">Mr.Yogesh Kumar, is Sachiv (सचिव) of Shubh Villa (Phase-2, Villa No. 27).</p>
 							</div>
 						</div>
 					</div>
@@ -201,7 +201,7 @@
 							<div class="card-body">
 								<h5>Mr. Jogendra Sachdeva<br/>
 									<span>Contact No: 9828080386</span></h5>
-								<p class="card-text">Mr. Jogendra Sachdeva, is Kosha Adhayaks of Shubh Villa (Phase-1, Villa No. 10).</p>
+								<p class="card-text">Mr. Jogendra Sachdeva, is koshadhyaksh (कोषाध्यक्ष) of Shubh Villa (Phase-1, Villa No. 10).</p>
 							</div>
 						</div>
 					</div>
