--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				
 				<div >
 					<div>
-						<div class="card text-center"><img class="card-img-top" src="img/AD.jpg" width="60px" heigt="90px"  alt="">
+						<div class="card text-center"><img class="card-img-top" src="img/ad.jpg" width="60px" heigt="90px"  alt="">
 							<div class="card-body">
 								<h5>Mr. B. P. Saraswat<br/>
 									<span>Contact No: 9414435301</span></h5>
