--- a/OtherActivity.html
+++ b/OtherActivity.html
@@ -75,6 +75,9 @@
     
     <br>
 
+    <p> Ganesh Chaturthi & Janmashtami 2023 - Expenditure</p>
+    <img src="img/JAG.jpg" width="570" height="450" />
+
     <p> Janmashtami And Ganesh Chaturthi Ji 2023 - Collection</p>
     <img src="img/JAC.jpg" width="633" height="1166" />
     
