--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
 				</div>
 			</div>
 		</div>
-<!--		
-		<h4 style="color: red">Key Highlights ......</h4> 
-		<p style="color: blue">Till now, Jul-Aug-Sep 2023 Balance: 3,24,000</p> 
-
+		
+		<h4 style="color: red"># Key Highlights ......</h4> 
+		<p style="color: blue">* Till now, Jul-Aug-Sep 2023 Maintenance Balance: 3,24,000</p> 
+		<p style="color: blue">* Socity Activity Fund Balance: 2,711</p> 
+		<p style="color: blue">* RWA Fund: 17,000</p> 
+<!--
 		<section class="carosal-area indeximage">
         <div class="container">
             <div class="row">
