--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -69,7 +69,7 @@
                 <br>
                 <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
                 <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
-                <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,24,000  </h4>
+                <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,30,000  </h4>
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
@@ -175,7 +175,7 @@
   list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-25	,Pooja Khandelwal,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-29	,Lokshita Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-30	,Peeyush Mathur,,,,,,,,,,,,");
