--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 				</div>
 			</div>
 		</div>
-		
+<!--		
 		<h4 style="color: red"># Key Highlights ......</h4> 
 		<p style="color: blue">* Till now, Jul-Aug-Sep 2023 Maintenance Balance: 3,24,000</p> 
 		<p style="color: blue">* Socity Activity Fund Balance: 2,711</p> 
 		<p style="color: blue">* RWA Fund: 18,000</p> 
-<!--
+
 		<section class="carosal-area indeximage">
         <div class="container">
             <div class="row">
@@ -185,7 +185,7 @@
 							<div class="card-body">
 								<h5>Mrs Rukmani Devi<br/>
 									<span>Contact No: 9829344150</span></h5>
-								<p class="card-text">Mrs Rukmani Devi, Upaadhyaksha (उपाध्यक्ष) of Shubh Villa.</p>
+								<p class="card-text">Mrs Rukmani Devi, Upaadhyaksha (उपाध्यक्ष) of Shubh Villa (Phase-2, Villa No. 06).</p>
 							</div>
 						</div>
 					</div>
@@ -204,6 +204,33 @@
 								<h5>Mr. Jogendra Sachdeva<br/>
 									<span>Contact No: 9828080386</span></h5>
 								<p class="card-text">Mr. Jogendra Sachdeva, is koshadhyaksh (कोषाध्यक्ष) of Shubh Villa (Phase-1, Villa No. 10).</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/JSA.jpg" width="60px" heigt="90px" alt="">
+							<div class="card-body">
+								<h5>Mr. Nand Singh Rajawat<br/>
+									<span>Contact No: 9928438888</span></h5>
+								<p class="card-text">Mr. Nand Singh Rajawat, is Joint Sachiv (संयुक्त सचिव) of Shubh Villa (Phase-1, Villa No. 45).</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/MA1.jpg" width="60px" heigt="90px" alt="">
+							<div class="card-body">
+								<h5>Mr. Rakesh Kumar<br/>
+									<span>Contact No: 9079205061</span></h5>
+								<p class="card-text">Mr. Rakesh Kumar, is Main Member (मुख्य सदस्य) of Shubh Villa (Phase-1, Villa No. 26).</p>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="card text-center"><img class="card-img-top" src="img/MA2.jpg" width="60px" heigt="90px" alt="">
+							<div class="card-body">
+								<h5>Mr. Jogendra Sachdeva<br/>
+									<span>Contact No: 9829155620</span></h5>
+								<p class="card-text">Mr. Raj Kumar Sharma, is  Main Member (मुख्य सदस्य) of Shubh Villa (Phase-1, Villa No. 09).</p>
 							</div>
 						</div>
 					</div>
