--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 							<div class="card-body">
 								<h5>Mr. Nand Singh Rajawat<br/>
 									<span>Contact No: 9928438888</span></h5>
-								<p class="card-text">Mr. Nand Singh Rajawat, is Joint Sachiv (संयुक्त सचिव) of Shubh Villa (Phase-1, Villa No. 45).</p>
+								<p class="card-text">Mr. Nand Singh Rajawat, is Up-Sachiv (उपसचिव) of Shubh Villa (Phase-1, Villa No. 45).</p>
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,27 @@
 			</div>
 		</div>
 
-
+		<pre style="color: rgb(35, 9, 228)">
+			नव गठित कार्यकारिणी निम्नानुसार है 
+			1. अध्यक्ष :: श्री बी.पी. सारस्वत 
+			2. उपाध्यक्ष :: श्रीमती रुक्मिणी देवी 
+			3. सचिव :: श्री योगेश कुमार 
+			4. कोषाध्यक्ष :: श्री जोगिंदर सचदेवा 
+			5. श्री राज कुमार शर्मा 
+			6. श्री राकेश कुमार 
+			7. उप सचिव :- श्री नन्द सिंह 
+			8. श्री शिरीष jaiman 
+			9. सुश्री रिचा शर्मा 
+			10. श्री योगेश जी 
+			11. श्री मेघराज खण्डेलवाल 
+			12. श्री हरिओम जी 
+			13. श्रीमती दीपा दत्ता 
+			14. श्री विकास शर्मा 
+			15. श्रीमती प्रीति राय 
+			16. श्री आर. सी. शर्मा 
+			17. श्री अरुण त्रिपाठी 
+			18. श्रीं गजेंद्र शर्मा 
+		</pre>
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
