--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 					<div>
 						<div class="card text-center"><img class="card-img-top" src="img/MA2.jpg" width="60px" heigt="90px" alt="">
 							<div class="card-body">
-								<h5>Mr. Jogendra Sachdeva<br/>
+								<h5>Mr. Raj Kumar Sharma<br/>
 									<span>Contact No: 9829155620</span></h5>
 								<p class="card-text">Mr. Raj Kumar Sharma, is  Main Member (मुख्य सदस्य) of Shubh Villa (Phase-1, Villa No. 09).</p>
 							</div>
