--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -65,11 +65,13 @@
                 <br>
                 <h4 style="color:darkgreen">  Monthly Maintenance Details (1000 per month till Jun and from July 2000 from each villa)</h4>
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>
+                <!--<h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji (Mobile No. 9929199901) Shubh Villa </h4>-->
+                <h4 style="color:darkgreen">  Cash only at Villa No. 10 </h4>
                 <br>
                 <h4 style="color:darkblue">  Jan-Feb-Mar 2023 Balance = 1,35,000  </h4>
                 <h4 style="color:darkblue">  Apr-May-Jun 2023 Balance = 1,26,000  </h4>
                 <h4 style="color:darkblue">  Jul-Aug-Sep 2023 Balance = 3,30,000  </h4>
+                <h4 style="color:darkblue">  Oct-Nov-Dec 2023 Balance = 78,000  </h4> <!--591000 -Total-->
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
 
                 <h4 style="color:rgb(63, 13, 229)">  Final Balance = <span id="TotalCollection"></span> </h4>
@@ -152,15 +154,15 @@
 	function getYear2023(){
 	 var list = [];
   list.push("	P1-Villa-1	,Pooja Saxena,,,,,,,,,,,,");
-  list.push("	P1-Villa-4	,Pushpa & Bhupesh Saini,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-4	,Pushpa & Bhupesh Saini,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-6	,Hemant Kumar & Nikita,,,,,,,,,,,,");
-  list.push("	P1-Villa-7	,Rahul & Anuja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-7	,Rahul & Anuja,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-8	,Anil & Ruchi Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-9	,Vinesh Sharma,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-10	,Jogendra & Sushma Sachdeva,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-10	,Jogendra & Sushma Sachdeva,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-11	,Poonam & Sundeep Mahala,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-14	,Ayush Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-15	,,,,,,,,,,,,,");
@@ -176,7 +178,7 @@
   list.push("	P1-Villa-25	,Pooja Khandelwal,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-29	,Lokshita Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-30	,Peeyush Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-31	,Mahesh Tapariya,,,,,,,,,,,,");
@@ -185,13 +187,13 @@
   list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-35	,Arpit Nogama,,,,,,,,,,,,");
   list.push("	P1-Villa-36	,Harish Kumar Yadav,,,,,,,,,,,,");
-  list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-38	,Manisha Singh,,,,,,,,,,,,");
-  list.push("	P1-Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-40	,Anita Kanwar,,,,,,,,,,,,");
   list.push("	P1-Villa-41	,Monika Mittal,,,,,,,,,,,,");
-  list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -200,8 +202,8 @@
   list.push("	P1-Villa-49	,Sunita Verma,,,,,,,,,,,,");
   list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
+  list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,2000,2000,2000,2000,2000,2000");
   list.push("	P1-Villa-54	,Vinod Garg,,,,,,,,,,,,");
   list.push("	P1-Villa-55	,Raj Kamal,,,,,,,,,,,,");
   list.push("	P1-Villa-56	,Kajor & Santosh Goyal,,,,,,,,,,,,");
@@ -250,9 +252,9 @@
   list.push("	P2-Villa-01	,Mayank Goyal,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-03	,Himmat Singh,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-04	,Meghraj Khandelwal,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-06	,Monika	Kheskani,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-06	,Monika	Kheskani,,,,,,,2000,2000,2000,2000,2000,2000");
   list.push("	P2-Villa-08	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,2000,2000,2000");
   list.push("	P2-Villa-16	,Seema	Asawat,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
